force-app/main/default/objects/CareService__c/fields/WWEmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>WWEmployeeNumber__c</fullName>
    <label>WWEmployeeNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>