force-app/main/default/objects/CareService__c/fields/Yellow_Code__c.field-meta.xml
<CustomField>
    <fullName>Yellow_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Yellow Code</label>
    <type>Checkbox</type>
</CustomField>