force-app/main/default/objects/CareService__c/recordTypes/DistantCareService.recordType-meta.xml
<RecordType>
    <fullName>DistantCareService</fullName>
    <active>true</active>
    <label>Distant Care Service</label>
</RecordType>