force-app/main/default/objects/CareService__c/recordTypes/StoreCareService.recordType-meta.xml
<RecordType>
    <fullName>StoreCareService</fullName>
    <active>true</active>
    <label>Store Care Service</label>
</RecordType>