force-app/main/default/objects/CareService__c/validationRules/Appointment_Attendance_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Appointment_Attendance_Required</fullName>
    <active>true</active>
    <description>Attendance field of Online Appointment is mandatory in order to send the quotation to the customer</description>
    <errorConditionFormula>AND(
OR(ISPICKVAL( Origin__c , &apos;LV App-Appointment Call&apos;),
ISPICKVAL( Origin__c , &apos;LV App-Appointment Video Call&apos;)),
Attendace_filled__c = false,
ISPICKVAL(ICONiCS_Status_Detail__c, &apos;Preliminary Quote Pending Validation&apos;))</errorConditionFormula>
    <errorMessage>Attendance Of Online Appointment should be completed before Sending Quotations.
In the case you have an DCS without an appointment, please add one.</errorMessage>
</ValidationRule>