force-app/main/default/objects/CareService__c/validationRules/Client_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_Restriction</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( NOT ($User.BypassVR__c), $Profile.Name &lt;&gt; &apos;System Administrator&apos; , $User.Alias &lt;&gt; &quot;autoproc&quot; , ISCHANGED( Client__c ))</errorConditionFormula>
    <errorDisplayField>Client__c</errorDisplayField>
    <errorMessage>You cannot change the client after creation</errorMessage>
</ValidationRule>