force-app/main/default/objects/CareService__c/validationRules/Destination_Edit_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Destination_Edit_Rule</fullName>
    <active>true</active>
    <description>As soon as the ICONiCS Details Status = Created in MyRepairs, the Destination field is no more editable</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;DistantCareService&apos;,
ISCHANGED( destination__c ) ,
NOT(
OR(
ISPICKVAL( ICONiCS_Status_Detail__c , &apos;New Request&apos;),
ISPICKVAL( ICONiCS_Status_Detail__c , &apos;Assigned&apos;),
ISPICKVAL( ICONiCS_Status_Detail__c , &apos;Pending Customer information&apos;),
ISPICKVAL( ICONiCS_Status_Detail__c , &apos;Initiated in MyRepairs as a Draft&apos;),
ISPICKVAL(PRIORVALUE(ICONiCS_Status_Detail__c ),&apos;Initiated in MyRepairs as a Draft&apos;)
) ) )</errorConditionFormula>
    <errorMessage>You can not edit destination after order creation in MyRepairs</errorMessage>
</ValidationRule>