force-app/main/default/objects/CareService__c/validationRules/Package_Declared_Value_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Package_Declared_Value_Required</fullName>
    <active>true</active>
    <description>if Package_Declared_Value__c is filled, it must be greater than 0</description>
    <errorConditionFormula>AND(
Package_Declared_Value__c &lt; 1,
NOT( ISBLANK( Package_Declared_Value__c ) ),
NOT( ISNULL( Package_Declared_Value__c ) )
)</errorConditionFormula>
    <errorMessage>Package Declared Value must be greater than 0</errorMessage>
</ValidationRule>