force-app/main/default/objects/CareService__c/validationRules/Pending_Reason_Edit_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Pending_Reason_Edit_Rule</fullName>
    <active>true</active>
    <description>When an DCS is in the status &quot;New Request&quot;, the field &quot;Pending Reason&quot; can&apos;t be modified.</description>
    <errorConditionFormula>AND(
ISCHANGED(  Pending_Reason__c  ) ,
ISPICKVAL( ICONiCS_Status_Detail__c , &apos;New Request&apos;)
)</errorConditionFormula>
    <errorMessage>When an DCS is in the status &quot;New Request&quot;, the field &quot;Pending Reason&quot; can&apos;t be modified.</errorMessage>
</ValidationRule>