force-app/main/default/objects/CareService__c/validationRules/Shipping_Addresses_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_Addresses_Required</fullName>
    <active>true</active>
    <description>Shipping adresses should be completed when client accept assesment</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;DistantCareService&apos;,
OR(
ISBLANK(Shipping_Address_Line_1__c),
ISBLANK(Shipping_City__c),
ISPICKVAL(Shipping_Country__c,&apos;&apos;),
ISBLANK(Shipping_Zip_Postal_Code__c)
),
OR(
ISPICKVAL(ICONiCS_Status_Detail__c,&apos;Preliminary Quote Validated&apos;),
ISPICKVAL(ICONiCS_Status_Detail__c,&apos;Shipped to Repair Center&apos;),
ISPICKVAL(ICONiCS_Status_Detail__c,&apos;Spare parts order preparation&apos;),
ISPICKVAL(ICONiCS_Status_Detail__c,&apos;Received in Repair Center&apos;),
ISPICKVAL(ICONiCS_Status_Detail__c,&apos;Order pending validation&apos;),
ISPICKVAL(ICONiCS_Status_Detail__c,&apos;Order accepted&apos;),
ISPICKVAL(ICONiCS_Status_Detail__c,&apos;Waiting for Spare parts&apos;),
ISPICKVAL(ICONiCS_Status_Detail__c,&apos;Repair in progress&apos;),
ISPICKVAL(ICONiCS_Status_Detail__c,&apos;Repair finalized&apos;),
ISPICKVAL(ICONiCS_Status_Detail__c,&apos;Waiting for Payment&apos;),
ISPICKVAL(ICONiCS_Status_Detail__c,&apos;Payment Confirmed&apos;),
ISPICKVAL(ICONiCS_Status_Detail__c,&apos;Shipped to Client&apos;),
ISPICKVAL(ICONiCS_Status_Detail__c,&apos;Delivered to Client&apos;),
ISPICKVAL(ICONiCS_Status_Detail__c,&apos;Product stocked&apos;)
)
)</errorConditionFormula>
    <errorMessage>The Delivery address section is not complete. Please fulfill the following fields: Shipping Address Line 1, Shipping City, Shipping Country, Shipping Zip/Postal Code.</errorMessage>
</ValidationRule>