force-app/main/default/objects/CareService__c/validationRules/Shipping_State_Province_ISO2.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_State_Province_ISO2</fullName>
    <active>true</active>
    <description>Shipping_State_Province__c should be ISO2 code to generate shipping label</description>
    <errorConditionFormula>AND(
StoreRetailCode__c =&apos;UE4&apos;,
LEN( Shipping_State_Province__c ) != 2,
NOT( ISBLANK( Shipping_State_Province__c ) ),
NOT( ISNULL(Shipping_State_Province__c ) )
)</errorConditionFormula>
    <errorMessage>Please enter  ISO2 Code for Shipping State/Province</errorMessage>
</ValidationRule>