force-app/main/default/objects/CareService__c/listViews/Abandon_process.listView-meta.xml
<ListView>
    <fullName>Abandon_process</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>TransactionId__c</columns>
    <columns>Client__c</columns>
    <columns>ICONiCS_Status_Detail__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Assigned_To__c</columns>
    <columns>destination__c</columns>
    <columns>Current_Status_Age__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ICONiCS_Status_Detail__c</field>
        <operation>equals</operation>
        <value>Waiting for Payment</value>
    </filters>
    <filters>
        <field>Current_Status_Age__c</field>
        <operation>greaterThan</operation>
        <value>90</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CareService__c.DistantCareService</value>
    </filters>
    <filters>
        <field>StoreRetailCode__c</field>
        <operation>equals</operation>
        <value>UE4</value>
    </filters>
    <label>[DCS] US - Abandon Process</label>
    <sharedTo>
        <role>Corporate</role>
        <roleAndSubordinatesInternal>CSC_DIRECTOR_US_CA</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>