force-app/main/default/objects/CareService__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code_Flag__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Client__c</columns>
    <columns>ICONiCS_Status_Detail__c</columns>
    <columns>Origin__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CareService__c.StoreCareService</value>
    </filters>
    <label>All</label>
</ListView>