force-app/main/default/objects/CareService__c/listViews/Client_validation_for_final_payment.listView-meta.xml
<ListView>
    <fullName>Client_validation_for_final_payment</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>TransactionId__c</columns>
    <columns>Client__c</columns>
    <columns>ICONiCS_Status_Detail__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Assigned_To__c</columns>
    <columns>destination__c</columns>
    <columns>Current_Status_Age__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ICONiCS_Status_Detail__c</field>
        <operation>equals</operation>
        <value>Order pending validation</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CareService__c.DistantCareService</value>
    </filters>
    <filters>
        <field>StoreRetailCode__c</field>
        <operation>equals</operation>
        <value>UE4</value>
    </filters>
    <label>[DCS] US Repair Pending Validation</label>
    <sharedTo>
        <role>Corporate</role>
        <roleAndSubordinatesInternal>CSC_DIRECTOR_US_CA</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>