force-app/main/default/objects/CareService__c/listViews/DCS_All_Open_Distant_Care_Service.listView-meta.xml
<ListView>
    <fullName>DCS_All_Open_Distant_Care_Service</fullName>
    <columns>NAME</columns>
    <columns>TransactionId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Client__c</columns>
    <columns>ICONiCS_Status_Detail__c</columns>
    <columns>Origin__c</columns>
    <columns>Appointement_DateTime__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Unread_email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CareService__c.DistantCareService</value>
    </filters>
    <filters>
        <field>IsClosed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>[DCS] All WW Open Distant Care Service</label>
    <sharedTo>
        <group>CSC_Care_Service_DE_UK</group>
        <role>Corporate</role>
    </sharedTo>
</ListView>