force-app/main/default/objects/CareService__c/listViews/DCS_Assigned_to_Inactive_Users.listView-meta.xml
<ListView>
    <fullName>DCS_Assigned_to_Inactive_Users</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>destination__c</columns>
    <columns>ICONiCS_Status_Detail__c</columns>
    <columns>IsClosed__c</columns>
    <columns>Store__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>StoreRetailCode__c</field>
        <operation>equals</operation>
        <value>UE4</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CareService__c.DistantCareService</value>
    </filters>
    <filters>
        <field>Assigned_To__c</field>
        <operation>equals</operation>
        <value>Linda Martin</value>
    </filters>
    <filters>
        <field>IsClosed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>UPDATEDBY_USER</field>
        <operation>notEqual</operation>
        <value>DJEINA DIARRA</value>
    </filters>
    <label>[DCS] US Assigned to Inactive Users</label>
    <sharedTo>
        <roleAndSubordinatesInternal>CSC_DIRECTOR_US_CA</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>