force-app/main/default/objects/CareService__c/listViews/DCS_AUS_All_Distant_Care_Service.listView-meta.xml
<ListView>
    <fullName>DCS_AUS_All_Distant_Care_Service</fullName>
    <columns>NAME</columns>
    <columns>TransactionId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Client__c</columns>
    <columns>ICONiCS_Status_Detail__c</columns>
    <columns>Origin__c</columns>
    <columns>Appointement_DateTime__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>destination__c</columns>
    <columns>Category__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Unread_email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CareService__c.DistantCareService</value>
    </filters>
    <filters>
        <field>StoreRetailCode__c</field>
        <operation>equals</operation>
        <value>L48</value>
    </filters>
    <label>[DCS] AU All Distant Care Service</label>
    <sharedTo>
        <group>CSC_Care_Service_AU</group>
        <role>Corporate</role>
        <roleAndSubordinatesInternal>APAC_CSC_AU_NE_Manager</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>